--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -146,7 +146,10 @@ jobs:
           git checkout main
           dvc pull -R data-tests/*
           mkdir -p ../AQUA/AQUA_tests
-          mv data-tests/* ../AQUA/AQUA_tests
+          # Link NetCDF and YAML files and preserve directory structure with rsync
+          rsync -av --prune-empty-dirs \
+            --include='*/' --include='*.nc' --include='*.yaml' --exclude='*' \
+            data-tests/ ../AQUA/AQUA_tests/
       - name: Set up FDB
         run: |
           export
