roll back to move

--- a/.github/workflows/aqua-complete.yml
+++ b/.github/workflows/aqua-complete.yml
@@ -78,8 +78,7 @@ jobs:
             apt-get install -y \
               curl \
               git \
-              gpg \
-              rsync
+              gpg
       - name: Clone GitLab data-portfolio repository
         run: |
           git clone https://oauth2:${{ secrets.BSC_GITLAB }}@earth.bsc.es/gitlab/digital-twins/de_340-2/data-portfolio data-portfolio
@@ -130,10 +129,8 @@ jobs:
           git checkout main
           dvc pull -R data-tests/*
           mkdir -p ../AQUA/AQUA_tests
-          # Link NetCDF and YAML files and preserve directory structure with rsync
-          rsync -av --prune-empty-dirs \
-            --include='*/' --include='*.nc' --include='*.yaml' --exclude='*' \
-            data-tests/ ../AQUA/AQUA_tests/
+          # Move the entire data-tests folder contents into AQUA_tests
+          mv data-tests/* ../AQUA/AQUA_tests
       - name: Set up FDB
         run: |
           export
