--- a/config/diagnostics/ocean3d/config_ocean_trends.yaml
+++ b/config/diagnostics/ocean3d/config_ocean_trends.yaml
@@ -24,5 +24,5 @@ diagnostics:
       diagnostic_name: 'ocean3d'
       run: true
       var: ['thetao', 'so']
-      region: 'io'
+      regions: ['io', 'ao', 'so', 'arc_o', 'po', 'go']
       # dim_mean: ['lat']
