--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -95,10 +95,6 @@ jobs:
           git clone https://oauth2:${{ secrets.BSC_GITLAB }}@earth.bsc.es/gitlab/digital-twins/de_340-2/data-portfolio data-portfolio
           cd data-portfolio
           git checkout tags/v2.0.0
-      # - name: List Workspace Contents
-      #   run: |
-      #     echo "Current Directory: $PWD"
-      #     ls -l
       - name: Set up Micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
@@ -112,9 +108,9 @@ jobs:
               - conda-forge
           create-args: >-
             python=${{ matrix.python-version }}
-      # - name: List Pip packages
-      #   run: |
-      #     pip freeze
+      - name: List Pip packages
+        run: |
+          pip freeze
       - name: Install Flake8
         run: |
           python -m pip install flake8
