Add references section to configuration and enhance CLI for reference data processing

--- a/config/diagnostics/ocean3d/config_ocean_stratification.yaml
+++ b/config/diagnostics/ocean3d/config_ocean_stratification.yaml
@@ -6,6 +6,13 @@ datasets:
     regrid: r100
     # reader_kwargs: {}
 
+references:
+  - catalog: null
+    model: 'FESOM'
+    exp: 'hpz3'
+    source: 'monthly-3d'
+    regrid: null
+
 output:
   outputdir: "./"
   rebuild: true
@@ -20,6 +27,6 @@ diagnostics:
       diagnostic_name: 'stratification'
       run: true
       var: ['thetao', 'so']
-      regions: ['io', 'sss']
-      climatology: 'Total'
+      regions: ['ls']
+      climatology: 'January'
       # dim_mean: ['lat', 'lon']
