duplicate boxplot config file in toa and sfc

--- a/config/diagnostics/boxplots/config_boxplots_sfc.yaml
+++ b/config/diagnostics/boxplots/config_boxplots_sfc.yaml
@@ -40,4 +40,9 @@ diagnostics:
   boxplots:
     run: true
     diagnostic_name: 'radiation'
-    variables:  ['-tnlwrf', 'tnswrf']
+    variables:
+      - vars: ['-snlwrf', 'snswrf']
+        anomalies: true
+        add_mean_line: true
+
+
