--- a/config/diagnostics/boxplots/config_boxplots.yaml
+++ b/config/diagnostics/boxplots/config_boxplots.yaml
@@ -40,4 +40,5 @@ diagnostics:
   boxplots:
     run: true
     diagnostic_name: 'radiation'
-    variables:  ['-tnlwrf', 'tnswrf']
+    variables:
+      - vars: ['-tnlwrf', 'tnswrf']
