--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -191,7 +191,7 @@ jobs:
           # Produce the XML report
           cd AQUA
           # produce a xml report and a junit report to be used by codecov. Please notice other options are set in pyproject.toml
-          pytest --cov-report=xml --junitxml=junit.xml -o junit_family=legacy -m "aqua or slow or gsv or graphics or catgen or diagnostics or ensemble"
+          pytest --cov-report=xml --junitxml=junit.xml -o junit_family=legacy -m "aqua or slow or gsv or graphics or catgen or diagnostics or ensemble" 2>&1 | tee aqua_pytest.log
       - name: Display coverage.xml contents
         if: ${{ github.actor != 'dependabot[bot]' }}
         run: cat AQUA/coverage.xml
@@ -207,3 +207,16 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: AQUA/junit.xml
+
+      - name: Upload test artifacts (coverage, pytest cache, logs)
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          # Upload common test artifacts to help debugging failed runs
+          name: aqua-test-artifacts
+          path: |
+            AQUA/coverage.xml
+            AQUA/.pytest_cache
+            AQUA/aqua_pytest.log
+          # Don't fail the job if some files are missing
+          if-no-files-found: ignore
