--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
     "matplotlib",
     "metpy",
     "numpy",
-    "pydantic",
+    "pydantic<2.12.0",
     "pypdf",
     "pyYAML",
     "ruamel.yaml",
