--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ dependencies = [
     "ECmean4==0.1.15",
     "pyfdb==0.1.2",
     "gsv-interface==2.13.1",
-    "zarr"
+    "zarr",
+    "regionmask"
 ]
 
 [project.optional-dependencies]
