--- a/config/analysis/config.aqua-analysis.yaml
+++ b/config/analysis/config.aqua-analysis.yaml
@@ -85,20 +85,35 @@ diagnostics:
     nworkers: 16
     config: "${AQUA_CONFIG}/diagnostics/timeseries/config_seasonalcycles_atm.yaml"
     outname: timeseries
-  radiation-biases:
+  radiation_toa-biases:
     script_path: "global_biases/cli_global_biases.py"
     nworkers: 8
-    config: "${AQUA_CONFIG}/diagnostics/radiation/config_radiation-biases.yaml"
+    config: "${AQUA_CONFIG}/diagnostics/radiation_toa/config-radiation_toa-biases.yaml"
     outname: radiation
-  radiation-boxplots:
+  radiation_toa-boxplots:
     script_path: "boxplots/cli_boxplots.py"
     nworkers: 8
-    config: "${AQUA_CONFIG}/diagnostics/radiation/config_radiation-boxplots.yaml"
+    config: "${AQUA_CONFIG}/diagnostics/radiation_toa/config-radiation_toa-boxplots.yaml"
     outname: radiation
-  radiation-timeseries:
+  radiation_toa-timeseries:
     script_path: "timeseries/cli_timeseries.py"
     nworkers: 8
-    config: "${AQUA_CONFIG}/diagnostics/radiation/config_radiation-timeseries.yaml"
+    config: "${AQUA_CONFIG}/diagnostics/radiation_toa/config-radiation_toa-timeseries.yaml"
+    outname: radiation
+  radiation_surface-biases:
+    script_path: "global_biases/cli_global_biases.py"
+    nworkers: 8
+    config: "${AQUA_CONFIG}/diagnostics/radiation_surface/config-radiation_surface-biases.yaml"
+    outname: radiation
+  radiation_surface-boxplots:
+    script_path: "boxplots/cli_boxplots.py"
+    nworkers: 8
+    config: "${AQUA_CONFIG}/diagnostics/radiation_surface/config-radiation_surface-boxplots.yaml"
+    outname: radiation
+  radiation_surface-timeseries:
+    script_path: "timeseries/cli_timeseries.py"
+    nworkers: 8
+    config: "${AQUA_CONFIG}/diagnostics/radiation_surface/config-radiation_surface-timeseries.yaml"
     outname: radiation
   teleconnections_atm:
     script_path: "teleconnections/cli_teleconnections.py"
