--- a/config/diagnostics/radiation_surface/config-radiation_surface-timeseries.yaml
+++ b/config/diagnostics/radiation_surface/config-radiation_surface-timeseries.yaml
@@ -18,7 +18,7 @@ datasets:
 references:
   - catalog: 'obs'
     model: 'CERES'
-    exp: 'ebaf-toa41'
+    exp: 'ebaf-sfc41'
     source: 'monthly'
     regrid: null
 
