--- a/config/diagnostics/ensemble/config_zonalmean_ensemble.yaml
+++ b/config/diagnostics/ensemble/config_zonalmean_ensemble.yaml
@@ -7,10 +7,12 @@ datasets:
     model: 'IFS-NEMO'
     exp: 'historical-1990'
     source: 'aqua-zonalmean'
+    realization: null
   - catalog: null
     model: 'IFS-NEMO'
     exp: 'historical-1990'
     source: 'aqua-zonalmean'
+    realization: null
 
 setup:
   loglevel: 'WARNING'
