documentation is remaining

--- a/config/diagnostics/ensemble/config_multi_model_timeseries_ensemble.yaml
+++ b/config/diagnostics/ensemble/config_multi_model_timeseries_ensemble.yaml
@@ -27,7 +27,7 @@ datasets:
 
 # Reference
 references:
-  - catalog: null  
+  - catalog: 'obs'  
     model: 'ERA5'
     exp: 'era5'
     source: 'aqua-timeseries-monthly'
