--- a/config/diagnostics/radiation_surface/config-radiation_surface-timeseries.yaml
+++ b/config/diagnostics/radiation_surface/config-radiation_surface-timeseries.yaml
@@ -33,7 +33,7 @@ diagnostics:
   timeseries:
     run: true
     diagnostic_name: 'radiation'
-    variables: ['snlwrf', 'snswrf']
+    variables: ['snlwrf', 'snswrf', 'slhtf', 'ishf']
     center_time: true
     params:
       default:
