--- a/config/diagnostics/ocean3d/config_ocean_drift.yaml
+++ b/config/diagnostics/ocean3d/config_ocean_drift.yaml
@@ -7,10 +7,10 @@ datasets:
     model: FESOM
     exp: hpz3
     source: monthly-3d
-    regrid: r100
+    regrid: null
+    reader_kwargs: null # it can be a dictionary with reader kwargs
     # startdate: 1990-01
     # enddate: 1990-12
-    # reader_kwargs: r100
 
 output:
   outputdir: "./"
