--- a/config/diagnostics/radiation_surface/config-radiation_surface-boxplots.yaml
+++ b/config/diagnostics/radiation_surface/config-radiation_surface-boxplots.yaml
@@ -46,6 +46,6 @@ diagnostics:
         add_mean_line: true
       - vars: ['slhtf', 'ishf']
         anomalies: true
-        add_mean_lìne: true
+        add_mean_line: true
 
 
