--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -92,7 +92,7 @@ jobs:
       # clone the BSC data portfolio repository
       - name: Clone GitLab data-portfolio repository
         run: |
-          git clone https://oauth2:${{ secrets.BSC_GITLAB }}@earth.bsc.es/gitlab/digital-twins/de_340-2/data-portfolio data-portfolio
+          git clone https://oauth2:${{ secrets.BSC_GITLAB }}@gitlab.earth.bsc.es/digital-twins/de_340-2/data-portfolio data-portfolio
           cd data-portfolio
           git checkout tags/v2.0.0
       - name: Set up Micromamba
