put all surface variables in the same plot

--- a/config/diagnostics/radiation_surface/config-radiation_surface-boxplots.yaml
+++ b/config/diagnostics/radiation_surface/config-radiation_surface-boxplots.yaml
@@ -41,10 +41,7 @@ diagnostics:
     run: true
     diagnostic_name: 'radiation'
     variables:
-      - vars: ['-snlwrf', 'snswrf']
-        anomalies: true
-        add_mean_line: true
-      - vars: ['slhtf', 'ishf']
+      - vars: ['-snlwrf', 'snswrf', 'slhtf', 'ishf']
         anomalies: true
         add_mean_line: true
 
