--- a/config/diagnostics/ocean3d/config_ocean_stratification.yaml
+++ b/config/diagnostics/ocean3d/config_ocean_stratification.yaml
@@ -3,10 +3,10 @@ datasets:
     model: FESOM
     exp: hpz3
     source: monthly-3d
-    regrid: r100
-    # startdate: '1990-01'
-    # enddate: '1990-12'
-    # reader_kwargs: {}
+    regrid: null
+    reader_kwargs: null # it can be a dictionary with reader kwargs
+    # startdate: 1990-01
+    # enddate: 1990-12
 
 references:
   - catalog: null
