testing fix and areas in config files

--- a/config/diagnostics/ensemble/config_latlon_ensemble.yaml
+++ b/config/diagnostics/ensemble/config_latlon_ensemble.yaml
@@ -8,12 +8,16 @@ datasets:
     source: 'aqua-atmglobalmean'
     regrid: null
     realization: null
+    #areas: False
+    #fix: True
   - catalog: 'nextgems4' 
     model: 'IFS-FESOM'
     exp: 'historical-1990'
     source: 'aqua-atmglobalmean'
     regrid: null
     realization: null
+    #areas: False
+    #fix: True
 
 setup:
   loglevel: 'WARNING'
