--- a/config/diagnostics/radiation_toa/config-radiation_toa-boxplots.yaml
+++ b/config/diagnostics/radiation_toa/config-radiation_toa-boxplots.yaml
@@ -42,6 +42,4 @@ diagnostics:
     diagnostic_name: 'radiation'
     variables:
       - vars: ['-tnlwrf', 'tnswrf']
-
-
-
+        add_mean_line: true
