--- a/environment.yml
+++ b/environment.yml
@@ -9,19 +9,15 @@ channels:
   - nodefaults
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
-  - python>=3.10,<3.13
-  - cdo>=2.5.0 #for smmregrid compatibility
+  - python==3.13
+  - cdo==2.5.0
   - eccodes==2.41.0
-  # for eccodes see issues #252, #634, #870, #1282
-  # PR #36 catalog repo
-  - cartopy_offlinedata # this is needed for MN5 HPC
-  - pandas      
-  - pip
-  - hdf5 #explicitly to avoid issues with pypi version
-  - tempest-extremes # for TCs
-  - xesmf # for ECmean
-  - intake-esm
-  - imagemagick
+  - cartopy_offlinedata==0.25.0 # this is needed for MN5 HPC
+  - pandas==2.3.3
+  - pip==25.2
+  - hdf5==1.14.3
+  - xesmf==0.8.10
+  - imagemagick==7.1.2_3
   - pip:
     - -e ./diagnostics/ocean3d/ # pip install -e of ocean3d
     - -e ./diagnostics/tropical_cyclones/ # pip install -e of tropical cyclones
