--- a/environment.yml
+++ b/environment.yml
@@ -12,14 +12,12 @@ dependencies:
   - python==3.13
   - cdo==2.5.0
   - eccodes==2.41.0
-  - cartopy_offlinedata==0.25.0 # this is needed for MN5 HPC
-  - pandas==2.3.3
+  #- cartopy_offlinedata==0.25.0 # this is needed for MN5 HPC
   - pip==25.2
   - hdf5==1.14.3
   - xesmf==0.8.10
   - imagemagick==7.1.2_3
   - pip:
-    - -e ./diagnostics/ocean3d/ # pip install -e of ocean3d
     - -e ./diagnostics/tropical_rainfall/ # pip install -e of tropical_rainfall
     # pip install -e of AQUA itself
     - -e .[all]
